--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^5.10.0",
     "redux-persist-expire": "^1.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sinon": "^8.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build-chrome": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build-web": "cross-env PUBLIC_URL=/githunt react-scripts build",
-    "test": "mocha --require @babel/register --require ignore-styles 'src/**/*.spec.js'",
+    "test": "mocha --require @babel/register --require ignore-styles --require ./test/helpers.js 'src/**/*.spec.js'",
     "coverage": "nyc --reporter html --reporter text npm test",
     "eject": "react-scripts eject",
     "gh-pages": "NODE_DEBUG=gh-pages gh-pages -d build"
