--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.4.1",
     "chai": "^4.2.0",
     "classnames": "^2.2.6",
+    "core-js-bundle": "^3.6.4",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
@@ -33,6 +34,17 @@
     "eject": "react-scripts eject",
     "gh-pages": "NODE_DEBUG=gh-pages gh-pages -d build"
   },
+  "nyc": {
+    "include": "src",
+    "exclude": "src/**/*.spec.js"
+  },
+  "coverageThreshold": {
+    "global": {
+      "branches": 100,
+      "functions": 100,
+      "lines": 100
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
@@ -40,6 +52,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.7",
+    "axios-mock-adapter": "^1.17.0",
     "cross-env": "^6.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -48,7 +61,8 @@
     "jsdom": "15.2.1",
     "jsdom-global": "3.0.2",
     "mocha": "^7.0.0",
-    "nyc": "^15.0.0"
+    "nyc": "^15.0.0",
+    "redux-mock-store": "^1.5.4"
   },
   "browserslist": [
     ">0.2%",
