--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "core-js-bundle": "^3.6.4",
     "font-awesome": "^4.7.0",
+    "mockdate": "^2.0.5",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -29,7 +30,7 @@
     "start": "react-scripts start",
     "build-chrome": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "build-web": "cross-env PUBLIC_URL=/githunt react-scripts build",
-    "test": "mocha --require @babel/register --require ignore-styles --require ./test/helpers.js 'src/**/*.spec.js'",
+    "test": "mocha --require @babel/register --require ignore-styles --require ./test/helpers.js --require mocha-snapshots 'src/**/*.spec.js'",
     "coverage": "nyc --reporter html --reporter text npm test",
     "eject": "react-scripts eject",
     "gh-pages": "NODE_DEBUG=gh-pages gh-pages -d build"
@@ -61,6 +62,7 @@
     "jsdom": "15.2.1",
     "jsdom-global": "3.0.2",
     "mocha": "^7.0.0",
+    "mocha-snapshots": "^4.2.0",
     "nyc": "^15.0.0",
     "redux-mock-store": "^1.5.4"
   },
@@ -69,5 +71,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "main": "index.js",
+  "repository": "https://github.com/jenniferthorpe/githunt-testing.git",
+  "author": "Jennifer Thorpe <jennifer.thorpe@hotmail.com>",
+  "license": "MIT"
 }
